--- a/arch/arm64/configs/lavender-perf_defconfig
+++ b/arch/arm64/configs/lavender-perf_defconfig
@@ -1,6 +1,6 @@
 CONFIG_THERMAL_SWITCH=y
 CONFIG_KERNEL_CUSTOM_F7A=y
-CONFIG_LOCALVERSION="-Genom-CAF-Q-EAS-lavender"
+CONFIG_LOCALVERSION="-Genom-CAF-EAS-lavender-V2-FE"
 CONFIG_LOCALVERSION_AUTO=y
 # CONFIG_USELIB is not set
 CONFIG_AUDIT=y
@@ -715,3 +715,4 @@ CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_CRYPTO_CRC32_ARM64=y
 CONFIG_QMI_ENCDEC=y
+CONFIG_WIREGUARD=n
